# VRPSD-PartII

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp  main.h  runner.py
CVRPSEP/: CMakeLists.txt
CVRPSEP/include/: capsep.h
CVRPSEP/source/: capsep.cpp  sort.cpp
basic_model/: CMakeLists.txt
basic_model/include/: basiccallback.h  basicmodel.h
basic_model/src/: basiccallback.cpp  basicmodel.cpp
cmake/: FindGUROBI.cmake  FindLEMON.cmake
cuts/: CMakeLists.txt
cuts/include/: aggregatedsriseparator.h  cutdata.h  cutpool.h  cvrpsepseparator.h  gendreauseparator.h  paradaseparator.h  partialroutesbuilder.h  partialrouteseparator.h  scenariocutseparator.h  sriseparator.h
cuts/src/: aggregatedsriseparator.cpp  cvrpsepseparator.cpp  gendreauseparator.cpp  paradaseparator.cpp  partialroutesbuilder.cpp  partialrouteseparator.cpp  scenariocutseparator.cpp  sriseparator.cpp
data/Jabali/k2/: 60_2_0.90_1_0.svrp  60_2_0.90_1_1.svrp  60_2_0.90_1_2.svrp  60_2_0.90_1_3.svrp  60_2_0.90_1_4.svrp  60_2_0.90_1_5.svrp  60_2_0.90_1_6.svrp  60_2_0.90_1_7.svrp  60_2_0.90_1_8.svrp  60_2_0.90_1_9.svrp  60_2_0.93_1_0.svrp  60_2_0.93_1_1.svrp  60_2_0.93_1_2.svrp  60_2_0.93_1_3.svrp  60_2_0.93_1_4.svrp  60_2_0.93_1_5.svrp  60_2_0.93_1_6.svrp  60_2_0.93_1_7.svrp  60_2_0.93_1_8.svrp  60_2_0.93_1_9.svrp  60_2_0.95_1_0.svrp  60_2_0.95_1_1.svrp  60_2_0.95_1_2.svrp  60_2_0.95_1_3.svrp  60_2_0.95_1_4.svrp  60_2_0.95_1_5.svrp  60_2_0.95_1_6.svrp  60_2_0.95_1_7.svrp  60_2_0.95_1_8.svrp  60_2_0.95_1_9.svrp  70_2_0.90_1_0.svrp  70_2_0.90_1_1.svrp  70_2_0.90_1_2.svrp  70_2_0.90_1_3.svrp  70_2_0.90_1_4.svrp  70_2_0.90_1_5.svrp  70_2_0.90_1_6.svrp  70_2_0.90_1_7.svrp  70_2_0.90_1_8.svrp  70_2_0.90_1_9.svrp  (+50 more)
data/Jabali/k3/: 50_3_0.85_1_0.svrp  50_3_0.85_1_1.svrp  50_3_0.85_1_2.svrp  50_3_0.85_1_3.svrp  50_3_0.85_1_4.svrp  50_3_0.85_1_5.svrp  50_3_0.85_1_6.svrp  50_3_0.85_1_7.svrp  50_3_0.85_1_8.svrp  50_3_0.85_1_9.svrp  50_3_0.88_1_0.svrp  50_3_0.88_1_1.svrp  50_3_0.88_1_2.svrp  50_3_0.88_1_3.svrp  50_3_0.88_1_4.svrp  50_3_0.88_1_5.svrp  50_3_0.88_1_6.svrp  50_3_0.88_1_7.svrp  50_3_0.88_1_8.svrp  50_3_0.88_1_9.svrp  50_3_0.90_1_0.svrp  50_3_0.90_1_1.svrp  50_3_0.90_1_2.svrp  50_3_0.90_1_3.svrp  50_3_0.90_1_4.svrp  50_3_0.90_1_5.svrp  50_3_0.90_1_6.svrp  50_3_0.90_1_7.svrp  50_3_0.90_1_8.svrp  50_3_0.90_1_9.svrp  60_3_0.85_1_0.svrp  60_3_0.85_1_1.svrp  60_3_0.85_1_2.svrp  60_3_0.85_1_3.svrp  60_3_0.85_1_4.svrp  60_3_0.85_1_5.svrp  60_3_0.85_1_6.svrp  60_3_0.85_1_7.svrp  60_3_0.85_1_8.svrp  60_3_0.85_1_9.svrp  (+50 more)
data/Jabali/k4/: 40_4_0.80_1_0.svrp  40_4_0.80_1_1.svrp  40_4_0.80_1_2.svrp  40_4_0.80_1_3.svrp  40_4_0.80_1_4.svrp  40_4_0.80_1_5.svrp  40_4_0.80_1_6.svrp  40_4_0.80_1_7.svrp  40_4_0.80_1_8.svrp  40_4_0.80_1_9.svrp  40_4_0.82_1_0.svrp  40_4_0.82_1_1.svrp  (+78 more)
data/ccvrp/: A-n32-k5-scen-H666.svrp  A-n32-k5-scen-L666.svrp  A-n34-k5-scen-H666.svrp  A-n34-k5-scen-L666.svrp  A-n36-k5-scen-H666.svrp  A-n36-k5-scen-L666.svrp  A-n37-k5-scen-H666.svrp  A-n37-k5-scen-L666.svrp  A-n44-k6-scen-H666.svrp  A-n44-k6-scen-L666.svrp  A-n45-k6-scen-H666.svrp  A-n45-k6-scen-L666.svrp  A-n55-k9-scen-H666.svrp  A-n55-k9-scen-L666.svrp  B-n39-k5-scen-H666.svrp  B-n39-k5-scen-L666.svrp  P-n50-k10-scen-H666.svrp  P-n50-k10-scen-L666.svrp  P-n51-k10-scen-H666.svrp  P-n51-k10-scen-L666.svrp
data_script/: compare_ccvrp.csv  compare_ccvrp_basic.csv  nov20_ccvrp_inout.csv  run.py
data_script/aug02/: aug02.csv  aug02_ccvrp.csv
data_script/aug16/: aug16_ccvrp.csv  aug16_jabali.csv  aug16_tmp.csv
data_script/aug21/: aug21_ccvrp.csv  aug21_jabali.csv
data_script/aug22/: aug22.csv  aug22_ccvrp.csv  aug22_jabali.csv
data_script/aug26/: aug26_ccvrp_set.csv  aug26_jabali_set.csv
data_script/dataProcessor/: dataProcessor.py  graphProcessor.py  verifier.py
data_script/dec7/: dec7_ccvrp.csv  dec7_ccvrp_basic.csv  dec7_jabali.csv  dec7_jabali_basic.csv
data_script/jan29/: jan29_ccvrp_scenopt.csv  jan29_ccvrp_scenopt_basic.csv  jan29_jabali_scenopt.csv  jan29_jabali_scenopt_basic.csv  jan29_jabalik2_scenopt.csv  jan29_jabalik2_scenopt_basic.csv  jan29_jabalik3_scenopt.csv  jan29_jabalik3_scenopt_basic.csv  jan29_jabalik4_scenopt.csv  jan29_jabalik4_scenopt_basic.csv
data_script/jul11/: jul11_jabali.csv
data_script/jul16/: jul16_classical.csv  jul16_jabali.csv
data_script/jul17/: jul17_classical.csv  jul17_optimal.csv
data_script/nov17/: nov17_all.csv  nov17_all_basic.csv  nov17_ccvrp.csv  nov17_ccvrp_basic.csv  nov17_jabali.csv  nov17_jabali2.csv  nov17_jabali2_basic.csv  nov17_jabali3.csv  nov17_jabali3_basic.csv  nov17_jabali4.csv  nov17_jabali4_basic.csv  nov17_jabali_basic.csv  nov17_tmp.csv  nov21_ccvrp_basic_sri.csv  nov21_ccvrp_sri.csv
flow_model/: CMakeLists.txt
flow_model/include/: flowcallback.h  flowmodel.h
flow_model/src/: flowcallback.cpp  flowmodel.cpp
general/: CMakeLists.txt
general/include/: classicalrecoursehelper.h  cxxopts.h  filehandler.h  geompack.h  graphviewer.h  mycolor.h  mygraphlib.h  myutils.h  optimalrecoursehelper.h  params.h  partialroute.h  stringhelper.h  svrpinstance.h  svrpsolution.h  thirdpartprograms.h
general/src/: classicalrecoursehelper.cpp  filehandler.cpp  geompack.cpp  graphviewer.cpp  mycolor.cpp  mygraphlib.cpp  myutils.cpp  optimalrecoursehelper.cpp  partialroute.cpp  stringhelper.cpp  svrpinstance.cpp  svrpsolution.cpp
node_recourse_model/: CMakeLists.txt
node_recourse_model/include/: noderecoursecallback.h  noderecoursecutbuilder.h  noderecoursemodel.h
node_recourse_model/src/: noderecoursecallback.cpp  noderecoursecutbuilder.cpp  noderecoursemodel.cpp
node_scenarios_model/: CMakeLists.txt
node_scenarios_model/include/: nodescenarioscallback.h  nodescenariosmodel.h
node_scenarios_model/src/: nodescenarioscallback.cpp  nodescenariosmodel.cpp
runner_script/: helper.py
(+190 files in other folders)
